Profilling de urls frontales para cors por environment